fix(style): adjusting styling for small screens for better button visibliity

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,8 +430,8 @@ nav button {
 }
 
 nav button:hover {
-	background-color: transparent;
-	border: #150d36 2px solid;
+	background-color: #150d36;
+	border: #28176e 2px solid;
 	cursor: pointer;
 }
 
